--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,15 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+
+<mat-toolbar  color="primary" class="mat-elevation-z6">
+
+  <a mat-button routerLink="/">
+    <span>COURSES</span>
+  </a>
+
+  <a mat-button routerLink="/about">
+    <span>ABOUT</span>
+  </a>
+
+</mat-toolbar>
+
+
+<router-outlet></router-outlet>
